# Copyright (C) 2005,2006,2007 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Additional files to include when running 'make dist'
#  MySQL header files for Win32 builds
EXTRA_DIST = \
	mysql/Libmysql.def \
	mysql/config-netware.h \
	mysql/config-os2.h \
	mysql/config-win.h \
	mysql/errmsg.h \
	mysql/libmysqld.def \
	mysql/m_ctype.h \
	mysql/m_string.h \
	mysql/my_alloc.h \
	mysql/my_dbug.h \
	mysql/my_getopt.h \
	mysql/my_global.h \
	mysql/my_list.h \
	mysql/my_pthread.h \
	mysql/my_sys.h \
	mysql/mysql.h \
	mysql/mysql_com.h \
	mysql/mysql_embed.h \
	mysql/mysql_time.h \
	mysql/mysql_version.h \
	mysql/mysqld_error.h \
	mysql/raid.h \
	mysql/typelib.h

#  OpenSSL header files for Win32 builds
EXTRA_DIST += \
	openssl/aes.h \
	openssl/asn1.h \
	openssl/asn1_mac.h \
	openssl/asn1t.h \
	openssl/bio.h \
	openssl/blowfish.h \
	openssl/bn.h \
	openssl/buffer.h \
	openssl/cast.h \
	openssl/comp.h \
	openssl/conf.h \
	openssl/conf_api.h \
	openssl/crypto.h \
	openssl/des.h \
	openssl/des_old.h \
	openssl/dh.h \
	openssl/dsa.h \
	openssl/dso.h \
	openssl/e_os2.h \
	openssl/ebcdic.h \
	openssl/ec.h \
	openssl/engine.h \
	openssl/err.h \
	openssl/evp.h \
	openssl/hmac.h \
	openssl/idea.h \
	openssl/krb5_asn.h \
	openssl/kssl.h \
	openssl/lhash.h \
	openssl/md2.h \
	openssl/md4.h \
	openssl/md5.h \
	openssl/mdc2.h \
	openssl/obj_mac.h \
	openssl/objects.h \
	openssl/ocsp.h \
	openssl/opensslconf.h \
	openssl/opensslv.h \
	openssl/ossl_typ.h \
	openssl/pem.h \
	openssl/pem2.h \
	openssl/pkcs12.h \
	openssl/pkcs7.h \
	openssl/rand.h \
	openssl/rc2.h \
	openssl/rc4.h \
	openssl/rc5.h \
	openssl/ripemd.h \
	openssl/rsa.h \
	openssl/safestack.h \
	openssl/sha.h \
	openssl/ssl.h \
	openssl/ssl2.h \
	openssl/ssl23.h \
	openssl/ssl3.h \
	openssl/stack.h \
	openssl/symhacks.h \
	openssl/tls1.h \
	openssl/tmdiff.h \
	openssl/txt_db.h \
	openssl/ui.h \
	openssl/ui_compat.h \
	openssl/x509.h \
	openssl/x509_vfy.h \
	openssl/x509v3.h

#  SQLite header files for Win32 builds
EXTRA_DIST += \
	sqlite/sqlite.h

#  VLD header files for Win32 builds
EXTRA_DIST += \
	vld/vld.h

#  Zlib header files for Win32 builds
EXTRA_DIST += \
	zlib/zconf.h \
	zlib/zlib.h

#  ZThread header files for Win32 builds
EXTRA_DIST += \
	zthread/AtomicCount.h \
	zthread/Barrier.h \
	zthread/BiasedReadWriteLock.h \
	zthread/BlockingQueue.h \
	zthread/BoundedQueue.h \
	zthread/Cancelable.h \
	zthread/ClassLockable.h \
	zthread/ConcurrentExecutor.h \
	zthread/Condition.h \
	zthread/Config.h \
	zthread/CountedPtr.h \
	zthread/CountingSemaphore.h \
	zthread/Exceptions.h \
	zthread/Executor.h \
	zthread/FairReadWriteLock.h \
	zthread/FastMutex.h \
	zthread/FastRecursiveMutex.h \
	zthread/Guard.h \
	zthread/GuardedClass.h \
	zthread/Lockable.h \
	zthread/LockedQueue.h \
	zthread/MonitoredQueue.h \
	zthread/Mutex.h \
	zthread/NonCopyable.h \
	zthread/PoolExecutor.h \
	zthread/Priority.h \
	zthread/PriorityCondition.h \
	zthread/PriorityInheritanceMutex.h \
	zthread/PriorityMutex.h \
	zthread/PrioritySemaphore.h \
	zthread/Queue.h \
	zthread/ReadWriteLock.h \
	zthread/RecursiveMutex.h \
	zthread/Runnable.h \
	zthread/Semaphore.h \
	zthread/Singleton.h \
	zthread/SynchronousExecutor.h \
	zthread/Task.h \
	zthread/Thread.h \
	zthread/ThreadLocal.h \
	zthread/ThreadLocalImpl.h \
	zthread/ThreadedExecutor.h \
	zthread/Time.h \
	zthread/Waitable.h \
	zthread/ZThread.h
